--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -11,47 +11,65 @@ spring.cloud.config.fail-fast=false
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-# Users API (admin)
-spring.cloud.gateway.routes[0].id=user-service-api
+# 1. Users API - /admin/users
+spring.cloud.gateway.routes[0].id=user-service-admin-api
 spring.cloud.gateway.routes[0].uri=lb://user-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/admin/users/**
 spring.cloud.gateway.routes[0].filters[0]=StripPrefix=0
 
-# Events API
-spring.cloud.gateway.routes[1].id=event-service-api
-spring.cloud.gateway.routes[1].uri=lb://event-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/events/**
+# 2. Users API - endpoints
+spring.cloud.gateway.routes[1].id=user-service-public-api
+spring.cloud.gateway.routes[1].uri=lb://user-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/users/**
 spring.cloud.gateway.routes[1].filters[0]=StripPrefix=0
 
-# Main Service Admin API
-spring.cloud.gateway.routes[2].id=main-service-admin-api
-spring.cloud.gateway.routes[2].uri=lb://main-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/admin/**
+# 3. Events API
+spring.cloud.gateway.routes[2].id=event-service-public-api
+spring.cloud.gateway.routes[2].uri=lb://event-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/events/**
 spring.cloud.gateway.routes[2].filters[0]=StripPrefix=0
 
-# Main Service Categories API
-spring.cloud.gateway.routes[3].id=main-service-categories-api
-spring.cloud.gateway.routes[3].uri=lb://main-service
-spring.cloud.gateway.routes[3].predicates[0]=Path=/categories/**
+# 4. Events API (admin/events)
+spring.cloud.gateway.routes[3].id=event-service-admin-api
+spring.cloud.gateway.routes[3].uri=lb://event-service
+spring.cloud.gateway.routes[3].predicates[0]=Path=/admin/events/**
 spring.cloud.gateway.routes[3].filters[0]=StripPrefix=0
 
-# Main Service Compilations API
-spring.cloud.gateway.routes[4].id=main-service-compilations-api
+# 5. Categories API (admin/categories)
+spring.cloud.gateway.routes[4].id=category-service-admin-api
 spring.cloud.gateway.routes[4].uri=lb://main-service
-spring.cloud.gateway.routes[4].predicates[0]=Path=/compilations/**
+spring.cloud.gateway.routes[4].predicates[0]=Path=/admin/categories/**
 spring.cloud.gateway.routes[4].filters[0]=StripPrefix=0
 
-# Comments API
-spring.cloud.gateway.routes[5].id=comment-service-api
-spring.cloud.gateway.routes[5].uri=lb://comment-service
-spring.cloud.gateway.routes[5].predicates[0]=Path=/comments/**
+# 6. Categories API
+spring.cloud.gateway.routes[5].id=category-service-public-api
+spring.cloud.gateway.routes[5].uri=lb://main-service
+spring.cloud.gateway.routes[5].predicates[0]=Path=/categories/**
 spring.cloud.gateway.routes[5].filters[0]=StripPrefix=0
 
-# Requests API
-spring.cloud.gateway.routes[6].id=request-service-api
-spring.cloud.gateway.routes[6].uri=lb://request-service
-spring.cloud.gateway.routes[6].predicates[0]=Path=/users/**/requests/**
+# 7. Compilations API (admin/compilations)
+spring.cloud.gateway.routes[6].id=compilation-service-admin-api
+spring.cloud.gateway.routes[6].uri=lb://main-service
+spring.cloud.gateway.routes[6].predicates[0]=Path=/admin/compilations/**
 spring.cloud.gateway.routes[6].filters[0]=StripPrefix=0
+
+# 8. Compilations API
+spring.cloud.gateway.routes[7].id=compilation-service-public-api
+spring.cloud.gateway.routes[7].uri=lb://main-service
+spring.cloud.gateway.routes[7].predicates[0]=Path=/compilations/**
+spring.cloud.gateway.routes[7].filters[0]=StripPrefix=0
+
+# 9. Comments API
+spring.cloud.gateway.routes[8].id=comment-service-api
+spring.cloud.gateway.routes[8].uri=lb://comment-service
+spring.cloud.gateway.routes[8].predicates[0]=Path=/comments/**
+spring.cloud.gateway.routes[8].filters[0]=StripPrefix=0
+
+# 10. Requests API
+spring.cloud.gateway.routes[9].id=request-service-api
+spring.cloud.gateway.routes[9].uri=lb://request-service
+spring.cloud.gateway.routes[9].predicates[0]=Path=/users/*/requests/**
+spring.cloud.gateway.routes[9].filters[0]=StripPrefix=0
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
