--- a/core/comment-service/src/main/resources/application.properties
+++ b/core/comment-service/src/main/resources/application.properties
@@ -2,15 +2,15 @@ spring.application.name=comment-service
 server.port=8085
 
 # Spring Cloud Config
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:6547/ewm-comments
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:root}
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -19,7 +19,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka Configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
