--- a/core/compilation-service/src/main/resources/application.properties
+++ b/core/compilation-service/src/main/resources/application.properties
@@ -2,15 +2,15 @@ spring.application.name=compilation-service
 server.port=8084
 
 # Spring Cloud Config
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:6546/ewm-compilations
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:root}
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -23,7 +23,7 @@ spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 
 # Eureka Configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
