--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=gateway-server
 spring.main.web-application-type=reactive
 
 # Spring Cloud Config
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
 
@@ -35,27 +35,27 @@ spring.cloud.gateway.routes[3].uri=lb://event-service
 spring.cloud.gateway.routes[3].predicates[0]=Path=/admin/events/**
 spring.cloud.gateway.routes[3].filters[0]=StripPrefix=0
 
-# 5. Categories API (admin/categories)
+# 5. Categories API (admin/categories) ? category-service
 spring.cloud.gateway.routes[4].id=category-service-admin-api
-spring.cloud.gateway.routes[4].uri=lb://main-service
+spring.cloud.gateway.routes[4].uri=lb://category-service
 spring.cloud.gateway.routes[4].predicates[0]=Path=/admin/categories/**
 spring.cloud.gateway.routes[4].filters[0]=StripPrefix=0
 
-# 6. Categories API
+# 6. Categories API ? category-service
 spring.cloud.gateway.routes[5].id=category-service-public-api
-spring.cloud.gateway.routes[5].uri=lb://main-service
+spring.cloud.gateway.routes[5].uri=lb://category-service
 spring.cloud.gateway.routes[5].predicates[0]=Path=/categories/**
 spring.cloud.gateway.routes[5].filters[0]=StripPrefix=0
 
-# 7. Compilations API (admin/compilations)
+# 7. Compilations API (admin/compilations) ? compilation-service
 spring.cloud.gateway.routes[6].id=compilation-service-admin-api
-spring.cloud.gateway.routes[6].uri=lb://main-service
+spring.cloud.gateway.routes[6].uri=lb://compilation-service
 spring.cloud.gateway.routes[6].predicates[0]=Path=/admin/compilations/**
 spring.cloud.gateway.routes[6].filters[0]=StripPrefix=0
 
-# 8. Compilations API
+# 8. Compilations API ? compilation-service
 spring.cloud.gateway.routes[7].id=compilation-service-public-api
-spring.cloud.gateway.routes[7].uri=lb://main-service
+spring.cloud.gateway.routes[7].uri=lb://compilation-service
 spring.cloud.gateway.routes[7].predicates[0]=Path=/compilations/**
 spring.cloud.gateway.routes[7].filters[0]=StripPrefix=0
 
@@ -72,7 +72,7 @@ spring.cloud.gateway.routes[9].predicates[0]=Path=/users/*/requests/**
 spring.cloud.gateway.routes[9].filters[0]=StripPrefix=0
 
 # Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
