--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -2,15 +2,15 @@ spring.application.name=stats-server
 server.port=9090
 
 # Spring Cloud Config
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:6542/ewm-stats
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=${STATS_DB_URL:jdbc:postgresql://localhost:6542/ewm-stats}
+spring.datasource.username=${STATS_DB_USERNAME:postgres}
+spring.datasource.password=${STATS_DB_PASSWORD:root}
 
 # JPA
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -19,7 +19,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
