--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -71,6 +71,24 @@ spring.cloud.gateway.routes[9].uri=lb://request-service
 spring.cloud.gateway.routes[9].predicates[0]=Path=/users/*/requests/**
 spring.cloud.gateway.routes[9].filters[0]=StripPrefix=0
 
+# 11. User Private Events API
+spring.cloud.gateway.routes[10].id=event-service-private-api
+spring.cloud.gateway.routes[10].uri=lb://event-service
+spring.cloud.gateway.routes[10].predicates[0]=Path=/users/*/events/**
+spring.cloud.gateway.routes[10].filters[0]=StripPrefix=0
+
+# 12. User Requests API
+spring.cloud.gateway.routes[11].id=request-service-user-api
+spring.cloud.gateway.routes[11].uri=lb://request-service
+spring.cloud.gateway.routes[11].predicates[0]=Path=/users/*/requests/**
+spring.cloud.gateway.routes[11].filters[0]=StripPrefix=0
+
+# 13. Admin Categories Events
+spring.cloud.gateway.routes[12].id=category-service-events-api
+spring.cloud.gateway.routes[12].uri=lb://category-service
+spring.cloud.gateway.routes[12].predicates[0]=Path=/admin/categories/*/events/**
+spring.cloud.gateway.routes[12].filters[0]=StripPrefix=0
+
 # Eureka
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
