--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -7,87 +7,71 @@ spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
 
-# Gateway
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+# Gateway Discovery
+spring.cloud.gateway.discovery.locator.enabled=false
 
-# 1. Users API - /admin/users
-spring.cloud.gateway.routes[0].id=user-service-admin-api
-spring.cloud.gateway.routes[0].uri=lb://user-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/admin/users/**
-spring.cloud.gateway.routes[0].filters[0]=StripPrefix=0
+# 1. ??????? (?????????) - /events
+spring.cloud.gateway.routes[0].id=event-service-public-api
+spring.cloud.gateway.routes[0].uri=lb://EVENT-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/events/**
 
-# 2. Users API - endpoints
-spring.cloud.gateway.routes[1].id=user-service-public-api
-spring.cloud.gateway.routes[1].uri=lb://user-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/users/**
-spring.cloud.gateway.routes[1].filters[0]=StripPrefix=0
+# 2. ????????? (?????????) - /categories
+spring.cloud.gateway.routes[1].id=category-service-public-api
+spring.cloud.gateway.routes[1].uri=lb://CATEGORY-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/categories/**
 
-# 3. Events API
-spring.cloud.gateway.routes[2].id=event-service-public-api
-spring.cloud.gateway.routes[2].uri=lb://event-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/events/**
-spring.cloud.gateway.routes[2].filters[0]=StripPrefix=0
+# 3. ???????? (?????????) - /compilations
+spring.cloud.gateway.routes[2].id=compilation-service-public-api
+spring.cloud.gateway.routes[2].uri=lb://COMPILATION-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/compilations/**
 
-# 4. Events API (admin/events)
-spring.cloud.gateway.routes[3].id=event-service-admin-api
-spring.cloud.gateway.routes[3].uri=lb://event-service
-spring.cloud.gateway.routes[3].predicates[0]=Path=/admin/events/**
-spring.cloud.gateway.routes[3].filters[0]=StripPrefix=0
+# 4. ?????????? (?????????) - /stats
+spring.cloud.gateway.routes[3].id=stats-server-public-api
+spring.cloud.gateway.routes[3].uri=lb://STATS-SERVER
+spring.cloud.gateway.routes[3].predicates[0]=Path=/stats/**
 
-# 5. Categories API (admin/categories) ? category-service
-spring.cloud.gateway.routes[4].id=category-service-admin-api
-spring.cloud.gateway.routes[4].uri=lb://category-service
-spring.cloud.gateway.routes[4].predicates[0]=Path=/admin/categories/**
-spring.cloud.gateway.routes[4].filters[0]=StripPrefix=0
+# 5. ??????? ???????????? - /users/{userId}/events
+spring.cloud.gateway.routes[4].id=event-service-private-api
+spring.cloud.gateway.routes[4].uri=lb://EVENT-SERVICE
+spring.cloud.gateway.routes[4].predicates[0]=Path=/users/*/events/**
+spring.cloud.gateway.routes[4].filters[0]=StripPrefix=1
 
-# 6. Categories API ? category-service
-spring.cloud.gateway.routes[5].id=category-service-public-api
-spring.cloud.gateway.routes[5].uri=lb://category-service
-spring.cloud.gateway.routes[5].predicates[0]=Path=/categories/**
-spring.cloud.gateway.routes[5].filters[0]=StripPrefix=0
+# 6. ?????? ???????????? - /users/{userId}/requests
+spring.cloud.gateway.routes[5].id=request-service-private-api
+spring.cloud.gateway.routes[5].uri=lb://REQUEST-SERVICE
+spring.cloud.gateway.routes[5].predicates[0]=Path=/users/*/requests/**
+spring.cloud.gateway.routes[5].filters[0]=StripPrefix=1
 
-# 7. Compilations API (admin/compilations) ? compilation-service
-spring.cloud.gateway.routes[6].id=compilation-service-admin-api
-spring.cloud.gateway.routes[6].uri=lb://compilation-service
-spring.cloud.gateway.routes[6].predicates[0]=Path=/admin/compilations/**
-spring.cloud.gateway.routes[6].filters[0]=StripPrefix=0
+# 7. ??????????? ???????????? - /users/{userId}/comments
+spring.cloud.gateway.routes[6].id=comment-service-private-api
+spring.cloud.gateway.routes[6].uri=lb://COMMENT-SERVICE
+spring.cloud.gateway.routes[6].predicates[0]=Path=/users/*/comments/**
+spring.cloud.gateway.routes[6].filters[0]=StripPrefix=1
 
-# 8. Compilations API ? compilation-service
-spring.cloud.gateway.routes[7].id=compilation-service-public-api
-spring.cloud.gateway.routes[7].uri=lb://compilation-service
-spring.cloud.gateway.routes[7].predicates[0]=Path=/compilations/**
-spring.cloud.gateway.routes[7].filters[0]=StripPrefix=0
+# 8. ????????? ??????? - /admin/events
+spring.cloud.gateway.routes[7].id=event-service-admin-api
+spring.cloud.gateway.routes[7].uri=lb://EVENT-SERVICE
+spring.cloud.gateway.routes[7].predicates[0]=Path=/admin/events/**
 
-# 9. Comments API
-spring.cloud.gateway.routes[8].id=comment-service-api
-spring.cloud.gateway.routes[8].uri=lb://comment-service
-spring.cloud.gateway.routes[8].predicates[0]=Path=/comments/**
-spring.cloud.gateway.routes[8].filters[0]=StripPrefix=0
+# 9. ????????? ???????????? - /admin/users
+spring.cloud.gateway.routes[8].id=user-service-admin-api
+spring.cloud.gateway.routes[8].uri=lb://USER-SERVICE
+spring.cloud.gateway.routes[8].predicates[0]=Path=/admin/users/**
 
-# 10. Requests API
-spring.cloud.gateway.routes[9].id=request-service-api
-spring.cloud.gateway.routes[9].uri=lb://request-service
-spring.cloud.gateway.routes[9].predicates[0]=Path=/users/*/requests/**
-spring.cloud.gateway.routes[9].filters[0]=StripPrefix=0
+# 10. ????????? ????????? - /admin/categories
+spring.cloud.gateway.routes[9].id=category-service-admin-api
+spring.cloud.gateway.routes[9].uri=lb://CATEGORY-SERVICE
+spring.cloud.gateway.routes[9].predicates[0]=Path=/admin/categories/**
 
-# 11. User Private Events API
-spring.cloud.gateway.routes[10].id=event-service-private-api
-spring.cloud.gateway.routes[10].uri=lb://event-service
-spring.cloud.gateway.routes[10].predicates[0]=Path=/users/*/events/**
-spring.cloud.gateway.routes[10].filters[0]=StripPrefix=0
+# 11. ????????? ???????? - /admin/compilations
+spring.cloud.gateway.routes[10].id=compilation-service-admin-api
+spring.cloud.gateway.routes[10].uri=lb://COMPILATION-SERVICE
+spring.cloud.gateway.routes[10].predicates[0]=Path=/admin/compilations/**
 
-# 12. User Requests API
-spring.cloud.gateway.routes[11].id=request-service-user-api
-spring.cloud.gateway.routes[11].uri=lb://request-service
-spring.cloud.gateway.routes[11].predicates[0]=Path=/users/*/requests/**
-spring.cloud.gateway.routes[11].filters[0]=StripPrefix=0
-
-# 13. Admin Categories Events
-spring.cloud.gateway.routes[12].id=category-service-events-api
-spring.cloud.gateway.routes[12].uri=lb://category-service
-spring.cloud.gateway.routes[12].predicates[0]=Path=/admin/categories/*/events/**
-spring.cloud.gateway.routes[12].filters[0]=StripPrefix=0
+# 12. ???????????? (??????????? ? ?.?.) - /users
+spring.cloud.gateway.routes[11].id=user-service-public-api
+spring.cloud.gateway.routes[11].uri=lb://USER-SERVICE
+spring.cloud.gateway.routes[11].predicates[0]=Path=/users/**
 
 # Eureka
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
