--- a/infra/config-server/src/main/resources/config/gateway-server/application.yml
+++ b/infra/config-server/src/main/resources/config/gateway-server/application.yml
@@ -1,29 +1,25 @@
 spring:
+  main:
+    web-application-type: reactive
   cloud:
     gateway:
       discovery:
         locator:
           enabled: true
+          lower-case-service-id: true
       routes:
-        # 1. Маршрут для пользователей (админка)
         - id: user_service_route
           uri: lb://user-service
           predicates:
             - Path=/admin/users/**
-
-        # 2. Маршрут для заявок (requests)
         - id: request_service_route
           uri: lb://request-service
           predicates:
             - Path=/admin/requests/**,/users/{userId}/requests/**,/users/{userId}/events/{eventId}/requests/**
-
-        # 3. Маршрут для событий, категорий и подборок
         - id: event_service_route
           uri: lb://event-service
           predicates:
             - Path=/admin/events/**,/events/**,/users/{userId}/events/**,/admin/categories/**,/categories/**,/admin/compilations/**,/compilations/**
-
-        # 4. Маршрут для комментариев
         - id: comment_service_route
           uri: lb://comment-service
           predicates:
