--- a/infra/gateway-server/src/main/resources/application.yml
+++ b/infra/gateway-server/src/main/resources/application.yml
@@ -11,74 +11,7 @@ spring:
       discovery:
         locator:
           enabled: true
-          lower-case-service-id: true
-      routes:
-        # Публичные маршруты
-        - id: events-public
-          uri: lb://event-service
-          predicates:
-            - Path=/events/**
-          filters:
-            - StripPrefix=0
-
-        - id: categories-public
-          uri: lb://category-service
-          predicates:
-            - Path=/categories/**
-          filters:
-            - StripPrefix=0
-
-        - id: compilations-public
-          uri: lb://compilation-service
-          predicates:
-            - Path=/compilations/**
-          filters:
-            - StripPrefix=0
-
-        - id: users-public
-          uri: lb://user-service
-          predicates:
-            - Path=/users/**
-            - Method=POST
-          filters:
-            - StripPrefix=0
-
-        # Приватные маршруты (нужна аутентификация)
-        - id: events-private
-          uri: lb://event-service
-          predicates:
-            - Path=/users/*/events/**
-          filters:
-            - StripPrefix=1
-
-        - id: requests-private
-          uri: lb://request-service
-          predicates:
-            - Path=/users/*/requests/**, /users/*/events/*/requests/**
-          filters:
-            - StripPrefix=1
-
-        # Админские маршруты
-        - id: admin-events
-          uri: lb://event-service
-          predicates:
-            - Path=/admin/events/**
-          filters:
-            - StripPrefix=1
-
-        - id: admin-users
-          uri: lb://user-service
-          predicates:
-            - Path=/admin/users/**
-          filters:
-            - StripPrefix=1
-
-        - id: admin-categories
-          uri: lb://category-service
-          predicates:
-            - Path=/admin/categories/**
-          filters:
-            - StripPrefix=1
+          lower-case-service-id: false
 
 eureka:
   client:
@@ -91,12 +24,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics,gateway
+        include: health,info
   endpoint:
     health:
       show-details: always
-
-logging:
-  level:
-    org.springframework.cloud.gateway: DEBUG
-    org.springframework.cloud.client.discovery: DEBUG
