--- a/core/comment-service/src/main/resources/application.properties
+++ b/core/comment-service/src/main/resources/application.properties
@@ -8,15 +8,16 @@ spring.cloud.config.fail-fast=false
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
-spring.datasource.username=${DATABASE_USERNAME:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:root}
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm_main_db
+spring.datasource.username=ewm_user
+spring.datasource.password=ewm_password
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=comment_schema
 
 # Eureka Configuration
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
