--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -8,12 +8,12 @@ spring.cloud.config.fail-fast=false
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${STATS_DB_URL:jdbc:postgresql://localhost:6542/ewm-stats}
-spring.datasource.username=${STATS_DB_USERNAME:postgres}
-spring.datasource.password=${STATS_DB_PASSWORD:root}
+spring.datasource.url=jdbc:postgresql://localhost:6542/ewm_stats_db
+spring.datasource.username=stat_user
+spring.datasource.password=stat_password
 
 # JPA
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
