--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -2,23 +2,91 @@ server.port=8080
 spring.application.name=gateway-server
 spring.main.web-application-type=reactive
 
-# Spring Cloud Config
+# Spring Cloud Config Configuration
 spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
 
-# Gateway Discovery
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+# Gateway Discovery Configuration
+spring.cloud.gateway.discovery.locator.enabled=false
 
-# Actuator
-management.endpoints.web.exposure.include=health,info,metrics,gateway,routes
-management.endpoint.health.show-details=always
-management.endpoint.gateway.enabled=true
+# 1. Public Events API - /events
+spring.cloud.gateway.routes[0].id=event-service-public-api
+spring.cloud.gateway.routes[0].uri=lb://EVENT-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/events/**
 
-# Eureka
+# 2. Public Categories API - /categories
+spring.cloud.gateway.routes[1].id=category-service-public-api
+spring.cloud.gateway.routes[1].uri=lb://CATEGORY-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/categories/**
+
+# 3. Public Compilations API - /compilations
+spring.cloud.gateway.routes[2].id=compilation-service-public-api
+spring.cloud.gateway.routes[2].uri=lb://COMPILATION-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/compilations/**
+
+# 4. Public Statistics API - /stats
+spring.cloud.gateway.routes[3].id=stats-server-public-api
+spring.cloud.gateway.routes[3].uri=lb://STATS-SERVER
+spring.cloud.gateway.routes[3].predicates[0]=Path=/stats/**
+
+# 5. Private Events API - /users/{userId}/events
+spring.cloud.gateway.routes[4].id=event-service-private-api
+spring.cloud.gateway.routes[4].uri=lb://EVENT-SERVICE
+spring.cloud.gateway.routes[4].predicates[0]=Path=/users/*/events/**
+spring.cloud.gateway.routes[4].filters[0]=StripPrefix=1
+
+# 6. Private Requests API - /users/{userId}/requests
+spring.cloud.gateway.routes[5].id=request-service-private-api
+spring.cloud.gateway.routes[5].uri=lb://REQUEST-SERVICE
+spring.cloud.gateway.routes[5].predicates[0]=Path=/users/*/requests/**
+spring.cloud.gateway.routes[5].filters[0]=StripPrefix=1
+
+# 7. Private Comments API - /users/{userId}/comments
+spring.cloud.gateway.routes[6].id=comment-service-private-api
+spring.cloud.gateway.routes[6].uri=lb://COMMENT-SERVICE
+spring.cloud.gateway.routes[6].predicates[0]=Path=/users/*/comments/**
+spring.cloud.gateway.routes[6].filters[0]=StripPrefix=1
+
+# 8. Admin Events API - /admin/events
+spring.cloud.gateway.routes[7].id=event-service-admin-api
+spring.cloud.gateway.routes[7].uri=lb://EVENT-SERVICE
+spring.cloud.gateway.routes[7].predicates[0]=Path=/admin/events/**
+
+# 9. Admin Users API - /admin/users
+spring.cloud.gateway.routes[8].id=user-service-admin-api
+spring.cloud.gateway.routes[8].uri=lb://USER-SERVICE
+spring.cloud.gateway.routes[8].predicates[0]=Path=/admin/users/**
+
+# 10. Admin Categories API - /admin/categories
+spring.cloud.gateway.routes[9].id=category-service-admin-api
+spring.cloud.gateway.routes[9].uri=lb://CATEGORY-SERVICE
+spring.cloud.gateway.routes[9].predicates[0]=Path=/admin/categories/**
+
+# 11. Admin Compilations API - /admin/compilations
+spring.cloud.gateway.routes[10].id=compilation-service-admin-api
+spring.cloud.gateway.routes[10].uri=lb://COMPILATION-SERVICE
+spring.cloud.gateway.routes[10].predicates[0]=Path=/admin/compilations/**
+
+# 12. Public Users API (registration, etc.) - /users
+spring.cloud.gateway.routes[11].id=user-service-public-api
+spring.cloud.gateway.routes[11].uri=lb://USER-SERVICE
+spring.cloud.gateway.routes[11].predicates[0]=Path=/users/**
+
+# Eureka Discovery Configuration
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
 eureka.instance.prefer-ip-address=true
+
+# Actuator Configuration for health checks and monitoring
+management.endpoints.web.exposure.include=health,info,metrics,gateway,routes
+management.endpoint.health.show-details=always
+management.endpoint.gateway.enabled=true
+management.endpoint.health.probes.enabled=true
+
+# Disable unnecessary health checks
+management.health.diskspace.enabled=false
+management.health.db.enabled=false
+management.health.redis.enabled=false
