--- a/core/category-service/src/main/resources/application.properties
+++ b/core/category-service/src/main/resources/application.properties
@@ -29,3 +29,8 @@ eureka.instance.prefer-ip-address=true
 # Actuator Endpoints
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+# init SQL
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.defer-datasource-initialization=true
