--- a/core/compilation-service/src/main/resources/application.properties
+++ b/core/compilation-service/src/main/resources/application.properties
@@ -20,7 +20,9 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=compilation_schema
 
 # SQL init
-spring.sql.init.mode=never
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.defer-datasource-initialization=true
 
 # Eureka Configuration
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
