--- a/core/event-service/src/main/resources/application.properties
+++ b/core/event-service/src/main/resources/application.properties
@@ -33,3 +33,8 @@ management.endpoint.health.show-details=always
 
 # External Services URLs
 services.stats.url=http://localhost:9090
+
+# SQL init
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.defer-datasource-initialization=true
