--- a/core/main-service/src/main/resources/application.properties
+++ b/core/main-service/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.properties.hibernate.default_schema=main_schema  # ???? ????????? ?????
+# spring.jpa.properties.hibernate.default_schema=main_schema
 
 # Eureka Configuration
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
