--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -28,3 +28,8 @@ eureka.instance.prefer-ip-address=true
 # Actuator
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+# SQL init
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.defer-datasource-initialization=true
