--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -73,6 +73,11 @@ spring.cloud.gateway.routes[11].id=user-service-public-api
 spring.cloud.gateway.routes[11].uri=lb://USER-SERVICE
 spring.cloud.gateway.routes[11].predicates[0]=Path=/users/**
 
+# 13. SPECIAL /users/{userId}
+spring.cloud.gateway.routes[12].id=user-service-direct-api
+spring.cloud.gateway.routes[12].uri=lb://USER-SERVICE
+spring.cloud.gateway.routes[12].predicates[0]=Path=/users/{userId}
+
 # Eureka Discovery Configuration
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
@@ -90,3 +95,10 @@ management.endpoint.health.probes.enabled=true
 management.health.diskspace.enabled=false
 management.health.db.enabled=false
 management.health.redis.enabled=false
+
+spring.webflux.static-path-pattern=/nowhere/**
+spring.cloud.gateway.default-filters[0]=RewritePath=/(?<path>.*), /$\{path}
+spring.cloud.gateway.force-refresh-route-cache-on-startup=true
+
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.reactor.netty.http.client=DEBUG
