--- a/infra/config-server/src/main/resources/application.properties
+++ b/infra/config-server/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=8888
 spring.application.name=config-server
 spring.profiles.active=native
 spring.cloud.config.server.native.search-locations=classpath:/config
-eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
