--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -2,13 +2,24 @@ server.port=8080
 spring.application.name=gateway-server
 spring.main.web-application-type=reactive
 
-# Spring Cloud Config Configuration
-spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
-spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
+# Config Server
+spring.cloud.config.enabled=false
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration,org.springframework.boot.autoconfigure.data.jpa.JpaRepositoriesAutoConfiguration
+
+# Eureka Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.healthcheck.enabled=true
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
+eureka.instance.lease-renewal-interval-in-seconds=5
+eureka.instance.lease-expiration-duration-in-seconds=10
 
 # Gateway Discovery Configuration
-spring.cloud.gateway.discovery.locator.enabled=false
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 # 1. Public Events API - /events
 spring.cloud.gateway.routes[0].id=event-service-public-api
@@ -78,27 +89,19 @@ spring.cloud.gateway.routes[12].id=user-service-direct-api
 spring.cloud.gateway.routes[12].uri=lb://USER-SERVICE
 spring.cloud.gateway.routes[12].predicates[0]=Path=/users/{userId}
 
-# Eureka Discovery Configuration
-eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.instance.instance-id=${spring.application.name}:${random.value}
-eureka.instance.prefer-ip-address=true
-
-# Actuator Configuration for health checks and monitoring
+# Actuator Configuration
 management.endpoints.web.exposure.include=health,info,metrics,gateway,routes
 management.endpoint.health.show-details=always
 management.endpoint.gateway.enabled=true
 management.endpoint.health.probes.enabled=true
 
-# Disable unnecessary health checks
+# health checks
 management.health.diskspace.enabled=false
 management.health.db.enabled=false
 management.health.redis.enabled=false
+management.health.eureka.enabled=true
 
-spring.webflux.static-path-pattern=/nowhere/**
-spring.cloud.gateway.default-filters[0]=RewritePath=/(?<path>.*), /$\{path}
-spring.cloud.gateway.force-refresh-route-cache-on-startup=true
-
-logging.level.org.springframework.cloud.gateway=DEBUG
-logging.level.reactor.netty.http.client=DEBUG
+# Gateway optimization
+spring.cloud.gateway.httpclient.connect-timeout=2000
+spring.cloud.gateway.httpclient.response-timeout=5000
+spring.cloud.gateway.metrics.enabled=true
