--- a/core/main-service/src/main/resources/application.properties
+++ b/core/main-service/src/main/resources/application.properties
@@ -1,34 +1,16 @@
 spring.application.name=main-service
 server.port=8081
 
-# Spring Cloud Config
-spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
-spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
+spring.main.web-application-type=none
 
-# Database Configuration
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm_main_db
-spring.datasource.username=ewm_user
-spring.datasource.password=ewm_password
+eureka.client.enabled=false
 
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.properties.hibernate.default_schema=main_schema
+spring.cloud.config.enabled=false
 
-# Eureka Configuration
-eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.instance.instance-id=${spring.application.name}:${random.value}
-eureka.instance.prefer-ip-address=true
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.data.jpa.JpaRepositoriesAutoConfiguration
 
-# Actuator
-management.endpoints.web.exposure.include=health,info,metrics
-management.endpoint.health.show-details=always
+feign.client.config.default.connect-timeout=5000
+feign.client.config.default.read-timeout=10000
 
-# Stats Server
-stats-server.url=http://localhost:9090
+logging.level.root=WARN
+logging.level.ru.practicum=INFO
