--- a/core/pom.xml
+++ b/core/pom.xml
@@ -54,6 +54,10 @@
             <version>5.1.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+        </dependency>
     </dependencies>
 
     <artifactId>core</artifactId>
