--- a/infra/gateway-server/src/main/resources/application.yaml
+++ b/infra/gateway-server/src/main/resources/application.yaml
@@ -1,27 +1,129 @@
+server:
+  port: 8080
+
 spring:
   application:
     name: gateway-server
-  config:
-    import: "configserver:"
+  main:
+    web-application-type: reactive
+  
   cloud:
     config:
-      # ?? ????????? ?????? ?????????? ?? ????????? ????????????
-      fail-fast: true
-      # ???? config-server ??????????, ????? ??????? ????????? ??????? ????????????
-      retry:
-        # ?????????? ????????? backoff ????? ?????????
-        useRandomPolicy: true
-        # ???????????? ????????, ? ??????? ???????? ?????? ??????? (6000 ??????????? = 6 ???)
-        max-interval: 6000
+      enabled: false
+    
+    gateway:
       discovery:
-        enabled: true
-        serviceId: config-server
+        locator:
+          enabled: true
+          lower-case-service-id: true
+      
+      routes:
+        - id: event-service-public-api
+          uri: lb://EVENT-SERVICE
+          predicates:
+            - Path=/events/**
+
+        - id: category-service-public-api
+          uri: lb://CATEGORY-SERVICE
+          predicates:
+            - Path=/categories/**
+
+        - id: compilation-service-public-api
+          uri: lb://COMPILATION-SERVICE
+          predicates:
+            - Path=/compilations/**
+
+        - id: stats-server-public-api
+          uri: lb://STATS-SERVER
+          predicates:
+            - Path=/stats/**
+
+        - id: event-service-private-api
+          uri: lb://EVENT-SERVICE
+          predicates:
+            - Path=/users/*/events/**
+          filters:
+            - StripPrefix=1
+
+        - id: request-service-private-api
+          uri: lb://REQUEST-SERVICE
+          predicates:
+            - Path=/users/*/requests/**
+          filters:
+            - StripPrefix=1
+
+        - id: comment-service-private-api
+          uri: lb://COMMENT-SERVICE
+          predicates:
+            - Path=/users/*/comments/**
+          filters:
+            - StripPrefix=1
+
+        - id: event-service-admin-api
+          uri: lb://EVENT-SERVICE
+          predicates:
+            - Path=/admin/events/**
+
+        - id: user-service-admin-api
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/admin/users/**
+
+        - id: category-service-admin-api
+          uri: lb://CATEGORY-SERVICE
+          predicates:
+            - Path=/admin/categories/**
+
+        - id: compilation-service-admin-api
+          uri: lb://COMPILATION-SERVICE
+          predicates:
+            - Path=/admin/compilations/**
+
+        - id: user-service-public-api
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/users/**
+
+        - id: user-service-direct-api
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/users/{userId}
 
 eureka:
   client:
-    serviceUrl:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+    healthcheck:
+      enabled: true
   instance:
-    preferIpAddress: true
-    instance-id: "${spring.application.name}:${random.value}"
-    leaseRenewalIntervalInSeconds: 10
+    instance-id: ${spring.application.name}:${random.value}
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 10
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,gateway,routes
+  endpoint:
+    health:
+      show-details: always
+    gateway:
+      enabled: true
+  health:
+    diskspace:
+      enabled: false
+    db:
+      enabled: false
+    redis:
+      enabled: false
+    eureka:
+      enabled: true
+
+# Gateway optimization
+spring.cloud.gateway.httpclient.connect-timeout: 2000
+spring.cloud.gateway.httpclient.response-timeout: 5000
+spring.cloud.gateway.metrics.enabled: true
