--- a/core/event-service/src/main/resources/application.yaml
+++ b/core/event-service/src/main/resources/application.yaml
@@ -1,26 +1,71 @@
 spring:
   application:
     name: event-service
-  config:
-    import: "configserver:"
+  main:
+    allow-bean-definition-overriding: true
+  
+  # Config Server
   cloud:
     config:
-      fail-fast: true
-      retry:
-        useRandomPolicy: true
-        max-interval: 6000
-      discovery:
-        enabled: true
-        serviceId: config-server
+      enabled: false
+  
+  # PostgreSQL Configuration
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/event_service_db
+    username: postgres
+    password: postgres
+    
+    hikari:
+      connection-timeout: 30000
+      maximum-pool-size: 10
+      minimum-idle: 5
+  
+  # JPA Configuration
+  jpa:
+    hibernate:
+      ddl-auto: validate  # или none
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        default_schema: public
+    
+    generate-ddl: false
+  
+  # SQL init
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:schema.sql
+      data-locations: classpath:data.sql
+      continue-on-error: false
+    initialization-mode: always
 
+# Eureka
 eureka:
   client:
-    serviceUrl:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
   instance:
-    preferIpAddress: true
-    instance-id: "${spring.application.name}:${random.value}"
-    leaseRenewalIntervalInSeconds: 10
+    prefer-ip-address: true
 
-stats-server:
-  url: ${STATS_SERVER_URL:http://localhost:9090}
+# Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
+
+# Logging
+logging:
+  level:
+    ru.practicum: DEBUG
+    org.springframework.jdbc: DEBUG
+    org.springframework.orm.jpa: DEBUG
